package maidsafe.vault.protobuf;
option optimize_for = LITE_RUNTIME;

// For MaidAccountHolder, "value" represents data "cost".
// For PmidAccountHolder, "value" represents data "size"
message DiskStoredElement {
  required int32 type = 1;
  required bytes name = 2;
  required int32 value = 3;
}

message DiskStoredFile {
  repeated DiskStoredElement element = 1;
}
